[package]
name = "saildb_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# saildb = "0.0.1"
saildb = { path = "../saildb" }
structopt = "0.3"
# canary = { path = "../canary/canary" }
# srpc = { path = "../srpc/srpc" }
srpc = "0.0.3"
canary = "0.0.6"

[[bin]]
name = "server"

[[bin]]
name = "client"
